--- a/class-exercises.html
+++ b/class-exercises.html
@@ -11,63 +11,71 @@
   </body>
 
     <script>
-      function Person(first, last, age, gender, interests) {
+      function Person(first, last, age, gender, interests) { 
+        //속성과 메소드 정의
         this.name = {
           'first': first,
           'last' : last
         };
-        this.age = age;
-        this.gender = gender;
-        this.interests = interests;
-        this.bio = function() {
-          // First define a string, and make it equal to the part of
-          // the bio that we know will always be the same.
-          var string = this.name.first + ' ' + this.name.last + ' is ' + this.age + ' years old. ';
-          // define a variable that will contain the pronoun part of
-          // the second sentence
-          var pronoun;
-
-          // check what the value of gender is, and set pronoun
-          // to an appropriate value in each case
-          if(this.gender === 'male' || this.gender === 'Male' || this.gender === 'm' || this.gender === 'M') {
-            pronoun = 'He likes ';
-          } else if(this.gender === 'female' || this.gender === 'Female' || this.gender === 'f' || this.gender === 'F') {
-            pronoun = 'She likes ';
-          } else {
-            pronoun = 'They like ';
-          }
-
-          // add the pronoun string on to the end of the main string
-          string += pronoun;
-
-          // use another conditional to structure the last part of the
-          // second sentence depending on whether the number of interests
-          // is 1, 2, or 3
-          if(this.interests.length === 1) {
-            string += this.interests[0] + '.';
-          } else if(this.interests.length === 2) {
-            string += this.interests[0] + ' and ' + this.interests[1] + '.';
-          } else {
-            // if there are more than 2 interests, we loop through them
-            // all, adding each one to the main string followed by a comma,
-            // except for the last one, which needs an and & a full stop
-            for(var i = 0; i < this.interests.length; i++) {
-              if(i === this.interests.length - 1) {
-                string += 'and ' + this.interests[i] + '.';
-              } else {
-                string += this.interests[i] + ', ';
-              }
-            }
-          }
-
-          // finally, with the string built, we alert() it
-          alert(string);
-        };
-        this.greeting = function() {
-          alert('Hi! I\'m ' + this.name.first + '.');
-        };
       };
-
+      // 인스턴스 만들긔
       let person1 = new Person('Tammi', 'Smith', 32, 'neutral', ['music', 'skiing', 'kickboxing']);
+
+
+      // this.age = age;
+      // this.gender = gender;
+      // this.interests = interests;
+      // this.bio = function() {
+      //   // 먼저 문자열을 정의하고 부분과 동일하게 만듭니다.
+      //   // 우리가 알고있는 바이오는 항상 동일합니다.
+      //   var string = this.name.first + ' ' + this.name.last + ' is ' + this.age + ' years old. ';
+      //   // define a variable that will contain the pronoun part of
+      //   // the second sentence
+      //   var pronoun;
+
+      //   // 대명사를 포함 할 변수를 정의합니다.
+      //   // 두 번째 문장
+      //   if(this.gender === 'male' || this.gender === 'Male' || this.gender === 'm' || this.gender === 'M') {
+      //     pronoun = 'He likes ';
+      //   } else if(this.gender === 'female' || this.gender === 'Female' || this.gender === 'f' || this.gender === 'F') {
+      //     pronoun = 'She likes ';
+      //   } else {
+      //     pronoun = 'They like ';
+      //   }
+
+      //   // add the pronoun string on to the end of the main string
+      //   string += pronoun;
+
+      //   // use another conditional to structure the last part of the
+      //   // second sentence depending on whether the number of interests
+      //   // is 1, 2, or 3
+      //   if(this.interests.length === 1) {
+      //     string += this.interests[0] + '.';
+      //   } else if(this.interests.length === 2) {
+      //     string += this.interests[0] + ' and ' + this.interests[1] + '.';
+      //   } else {
+      //     // if there are more than 2 interests, we loop through them
+      //     // all, adding each one to the main string followed by a comma,
+      //     // except for the last one, which needs an and & a full stop
+      //     for(var i = 0; i < this.interests.length; i++) {
+      //       if(i === this.interests.length - 1) {
+      //         string += 'and ' + this.interests[i] + '.';
+      //       } else {
+      //         string += this.interests[i] + ', ';
+      //       }
+      //     }
+      //   }
+
+      //   // finally, with the string built, we alert() it
+      //   alert(string);
+      // };
+      // this.greeting = function() {
+      //   alert('Hi! I\'m ' + this.name.first + '.');
+      // };
     </script>
+
+    
 </html>
+
+
+
