2.속성 몇개 더 넣기ㅎ-ㅎ

--- a/class-exercises.html
+++ b/class-exercises.html
@@ -17,14 +17,14 @@
           'first': first,
           'last' : last
         };
+        this.age = age;
+        this.gender = gender;
+        this.interests = interests;
       };
       // 인스턴스 만들긔
       let person1 = new Person('Tammi', 'Smith', 32, 'neutral', ['music', 'skiing', 'kickboxing']);
 
 
-      // this.age = age;
-      // this.gender = gender;
-      // this.interests = interests;
       // this.bio = function() {
       //   // 먼저 문자열을 정의하고 부분과 동일하게 만듭니다.
       //   // 우리가 알고있는 바이오는 항상 동일합니다.
