3.person1을 프로토타입 객체로 삼는 새로운 객체생성

--- a/class-exercises.html
+++ b/class-exercises.html
@@ -23,7 +23,7 @@
       };
       // 인스턴스 만들긔
       let person1 = new Person('Tammi', 'Smith', 32, 'neutral', ['music', 'skiing', 'kickboxing']);
-
+      var person2 = Object.create(person1);
 
       // this.bio = function() {
       //   // 먼저 문자열을 정의하고 부분과 동일하게 만듭니다.
