--- a/class-exercises.html
+++ b/class-exercises.html
@@ -25,6 +25,11 @@
       let person1 = new Person('Tammi', 'Smith', 32, 'neutral', ['music', 'skiing', 'kickboxing']);
       var person2 = Object.create(person1);
       let person3 = new person1.constructor('Karen', 'Stephenson', 26, 'female', ['playing drums', 'mountain climbing']);
+
+      //prototype 속성에 새 메소드를 추가
+      Person.prototype.farewell = function() {
+        alert(this.name.first + ' has left the building. Bye for now!');
+      };
       
       // this.bio = function() {
       //   // 먼저 문자열을 정의하고 부분과 동일하게 만듭니다.
