--- a/JS/test.html
+++ b/JS/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>맥북 깃 테스트</title>
     <script src="promise-exercises2.js" defer></script>
 </head>
 <body>
